<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShareCare</string>
    <string-array name="Religion">
        <item>Islam</item>
        <item>christianity</item>
        <item>Judaism</item>
    </string-array>
    <string-array name="Languages">
        <item>Arabic</item>
        <item>English</item>
        <item>Hebrew</item>
    </string-array>
    <string-array name="Cities">
        <item>Jerusalem</item>
        <item>Tel Aviv</item>
        <item>Haifa</item>
        <item>Rishon LeZion</item>
        <item>Petah Tikva</item>
        <item>Ashdod</item>
        <item>Netanya</item>
        <item>Beersheba</item>
        <item>Holon</item>
        <item>Bnei Brak</item>
        <item>Ramat Gan</item>
        <item>Rehovot</item>
        <item>Bat Yam</item>
        <item>Ashkelon</item>
        <item>Jaffa</item>
        <item>Modiin-Maccabim-Reut</item>
        <item>Herzliya</item>
        <item>Kfar Saba</item>
        <item>Raanana</item>
        <item>Bet Shemesh</item>
        <item>Lod</item>
        <item>Nahariya</item>
        <item>Hadera</item>
        <item>Beit Shemesh</item>
        <item>Kiryat Ata</item>
        <item>Kiryat Gat</item>
        <item>Givaatayim</item>
        <item>Ramat HaSharon</item>
        <item>Yavne</item>
        <item>Modiin Illit</item>
        <item>Tiberias</item>
        <item>Hod HaSharon</item>
        <item>Qiryat Motzkin</item>
        <item>Eilat</item>
        <item>Raas al-Ein</item>
        <item>Nablus</item>
        <item>Ariel</item>
        <item>Qiryat Yam</item>
        <item>Kiryat Bialik</item>
        <item>Qiryat Ono</item>
        <item>Or Yehuda</item>
        <item>Qiryat Shemona</item>
        <item>Kiryat Malakhi</item>
        <item>Dimona</item>
        <item>Yehud-Monosson</item>
        <item>Sderot</item>
        <item>Tirat Carmel</item>
        <item>Rosh HaAyin</item>
        <item>Arad</item>
        <item>Kiryat Shmona</item>
        <item>Hod HaSharon</item>
        <item>Nazareth</item>
        <item>Qalansawe</item>
        <item>Karmiel</item>
        <item>Netivot</item>
        <item>Nesher</item>
        <item>Nahariya</item>
        <item>Ofakim</item>
        <item>Qiryat Gat</item>
        <item>Qiryat Ata</item>
        <item>Umm al-Fahm</item>
        <item>Tamra</item>
        <item>Migdal HaEmek</item>
        <item>Acre</item>
        <item>Yokneam</item>
        <item>Tayibe</item>
        <item>Beit Jann</item>
        <item>Qalqilya</item>
        <item>Shaghur</item>
        <item>Kafr Qasim</item>
        <item>Daliyat al-Karmel</item>
        <item>Afula</item>
        <item>Rahat</item>
        <item>Sakhnin</item>
        <item>Sderot</item>
        <item>Kiryat Yam</item>
        <item>Tuba-Zangariyye</item>
        <item>Beit Sheaan</item>
        <item>Shoham</item>
        <item>Kafr Manda</item>
        <item>Ofaqim</item>
        <item>Metula</item>
        <item>Ramat Yishai</item>
        <item>Sakhnin</item>
        <item>Nof HaGalil</item>
    </string-array>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string-array name="Religions">
        <item>Muslim</item>
        <item>Jewish</item>
        <item>Christian</item>
    </string-array>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="get_started">Get Started</string>
    <string name="share_care">Share Care</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="number_of_kids">Number of kids</string>
    <string name="email">Email</string>
    <string name="number_of_kids1">Number Of Kids :</string>
    <string name="sign_up1">Sign Up</string>
    <string name="marital_status">Marital Status :</string>
    <string name="gender">Gender :</string>
    <string name="search_loading">Search...</string>
    <string name="select_religion"> Select Religion</string>
    <string name="first_name">first name</string>
    <string name="age">Age</string>
    <string name="last_name">last name</string>
    <string name="create_children_profile">Create Children profile</string>
    <string name="grade">Grade</string>
    <string name="birthday">Birthday</string>
    <string name="id">id</string>
    <string name="phone2">Phone</string>
    <string name="marital_status1">Marital Status</string>
    <string name="gender1">Gender</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="email1">Email</string>
    <string name="phone3">Phone</string>
    <string name="todo">TODO</string>
    <string name="joining_requests">Joining Requests</string>
    <string name="add_requests">Add Requests</string>
    <string name="religion">Religion :</string>
    <string name="language">Language :</string>
    <string name="address1">Address :</string>
    <string name="religion1">Religion :</string>
    <string name="language1">Language</string>
    <string name="religion2">Religion</string>
    <string name="language2">Language :</string>
    <string name="email2">Email :</string>
    <string name="phone1">Phone :</string>
    <string name="password1">Password :</string>
    <string name="fill_kids_information">Fill Kids Information</string>
    <string name="kid_1">Kid 1</string>
    <string name="kid_2">Kid 2</string>
    <string name="kid_3">Kid 3</string>
    <string name="kid_4">Kid 4</string>
    <string name="kid_5">Kid 5</string>
    <string name="kid_6">Kid 6</string>
    <string name="kid_7">Kid 7</string>
    <string name="kid_8">Kid 8</string>
    <string name="kid_9">Kid 9</string>
    <string name="kid_10">kid 10</string>
    <string name="finish">Finish</string>
    <string name="new_kid">New Kid</string>
    <string name="create_kid_profile">Create Kid Profile</string>
    <string name="kid_number">Kid Number</string>
    <string name="age1">Age</string>
    <string name="school_name">School Name</string>
    <string name="name22">Name</string>
    <string name="share_care1">Share Care</string>
    <string name="forget_password">forget password</string>
    <string name="remember_me">Remember Me</string>
    <string name="todo33">TODO</string>
    <string name="provide_your_email_to_reset_your_password">Provide your email to reset your password</string>
    <string name="reset_password">reset password</string>
    <string name="back">back</string>
    <string name="hello">Hello,</string>
    <string name="name">name</string>
    <string name="my_groups">My Groups</string>
    <string name="search_group">Search Group</string>
    <string name="my_profile">My Profile</string>
    <string name="my_children">My Children</string>
    <string name="log_out">Log Out</string>
    <string name="todo44">TODO</string>
    <string name="create_new_group">Create New Group</string>
    <string name="street">Street</string>
    <string name="select_city">Select City</string>
    <string name="group_name">Group Name</string>
    <string name="search_screen">Search Screen</string>
    <string name="search_button">Search</string>
    <string name="location_label">Location</string>
    <string name="description">Description</string>
    <string name="select_participants">Select Participants</string>
    <string name="Save">Save</string>
    <string name="activity_name">Activity Name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="enter_activity_name">Enter activity name</string>
    <string name="choose_activity">Choose Activity</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="age_of_child">Age of Child</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="capacity">Capacity</string>
    <string name="duration">Duration In Hours</string>
    <string name="save1">Save</string>
    <string name="selected_date">Selected Date</string>
    <string name="selected_time">Selected Time</string>
    <string name="enter_capacity">Enter capacity</string>
    <string name="enter_duration">Enter duration</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo27">TODO</string>
    <string name="todo28">TODO</string>
    <string name="todo29">TODO</string>
    <string name="my_kids">My Kids</string>
    <string name="kid_name">Kid Name</string>
    <string name="todo7">TODO</string>
    <string name="username_label">User Name</string>
    <string name="phone_label">Phone Number</string>
    <string name="address_label">Address</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="kids_label">Number of Kids</string>
    <string name="marital_label">Marital Status</string>
    <string name="gender_label">Gender</string>
    <string name="language_label">Language</string>
    <string name="religion_label">Religion</string>
    <string name="Select_Language">Select Language</string>
    <string name="Select_Religion">Select Religion</string>
    <string name="Select_City">Select City</string>
    <string name="Select_Cityav">Hint : below are available groups cities</string>
    <string name="group_name_with_dots">Group Name: </string>
    <string name="filter">Filter</string>
    <string name="create_activity">Create Activity</string>
    <string name="activity_type">Activity Type</string>
    <string name="capacity_range">Capacity Range</string>
    <string name="duration_range">Duration In Hours Range</string>
    <string name="age_range">Age Range</string>
    <string name="date_range">Date Range</string>
    <string name="time_range">Time Range</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="submit_filter">Submit Filter</string>
    <string name="return_word">return</string>
    <string name="user_name_hint">(4-20 chars, alphanumeric, _, -)</string>
    <string name="phone_number_hint">Phone (10 digits)</string>
    <string name="address_hint">Address (5 - 100 chars)</string>
    <string name="password_hint">Password (min 6 chars, letters, numbers, special chars)</string>
    <string name="email_hint">Email (e.g., abc@example.com)</string>
    <string-array name="Number_Of_Kids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="Marital_Status">
        <item>Married</item>
        <item>Single</item>
    </string-array>
    <string name="sign_up2">Sign Up</string>
    <string name="username55">Username</string>
    <string name="activity_name56">Activity Name</string>
    <string name="request_date66">Request Date</string>
    <string name="return667">Return</string>
    <string name="name99">Name</string>
    <string name="type98">Type</string>
    <string name="date97">Date</string>
    <string name="time96">Time</string>
    <string name="duration_in_hours95">Duration In Hours</string>
    <string name="h94">Capacity</string>
    <string name="ages_from93">Ages From :</string>
    <string name="to92">To :</string>
    <string name="close91">Close</string>
</resources>