<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/user_name_hint"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addressEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address_hint"
                android:inputType="textPostalAddress"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kids_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/kidsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Number_Of_Kids"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marital_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/maritalSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Marital_Status"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Gender"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Languages"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/religion_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/religionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Religions"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/sign_up2" />

        </LinearLayout>

</FrameLayout>