<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Table header -->
    <TableRow>
        <TextView
            android:text="@string/username55"
            android:textStyle="bold"
            android:padding="8dp" />
        <TextView
            android:text="@string/activity_name56"
            android:textStyle="bold"
            android:padding="8dp" />
        <TextView
            android:text="@string/request_date66"
            android:textStyle="bold"
            android:padding="8dp" />
        <TextView
            android:text=""
            android:padding="8dp" />
        <TextView
            android:text=""
            android:padding="8dp" />
    </TableRow>

    <!-- Table rows will be added dynamically -->

    <!-- Button to return to the previous activity -->
    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#24978C"
        android:onClick="returnToPreviousActivity"
        android:text="@string/return667"
        tools:ignore="TextContrastCheck" />

</TableLayout>
