<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/text_activity_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/name99"
        android:textAppearance="?android:textAppearanceLarge"/>

    <TextView
        android:id="@+id/activity_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/text_activity_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="@string/type98"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/activity_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/text_activity_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="@string/date97"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/text_activity_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="@string/time96"
        android:textAppearance="?android:textAppearanceLarge" />
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAppearance="?android:textAppearanceLarge" />


    <TextView
        android:id="@+id/text_activity_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="@string/duration_in_hours95"
        android:textAppearance="?android:textAppearanceLarge" />
    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/text_activity_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="@string/h94"
        android:textAppearance="?android:textAppearanceLarge" />
    <TextView
        android:id="@+id/capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/text_activity_agefrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="@string/ages_from93"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/child_age_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/text_activity_ageto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/to92"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/child_age_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAppearance="?android:textAppearanceLarge" />


    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#24978C"
        android:text="@string/close91"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
